<resources>
    <string name="app_name">BoardLog</string>
    <string name="home_title">BoardLog Recorder</string>
    <string name="new_subj">Add \n board</string>
    <string name="exp_subj">Export boards data to csv</string>
    <string name="get_data">Start Session</string>
    <string name="new_exp">record session</string>
    <string name="no_acc">No acceleration data</string>
    <string name="no_gyro">No angular velocity data</string>
    <string name="acc">Acceleration (m/s²)</string>
    <string name="gyro">Angular velocity (°/s)</string>
    <string name="requesting">Requesting data...</string>
    <string name="received">Data received!</string>
    <string name="no_service">IMU6 service not available</string>
    <string name="error">Unexpected error</string>
    <string name="no_info">-</string>
    <string name="no_device">No device</string>
    <string name="record_exp">record session</string>
    <string name="recording_exp">recording…</string>
    <string name="add_subj_title">add new board</string>
    <string name="scan_title">select sensor</string>
    <string name="scan_movesense_devices">Scan for Movesense devices</string>
    <string name="no_devices_found">No devices found</string>

    <string-array name="boardsport_values">
        <item>Surf</item>
        <item>Sup</item>
        <item>Skate</item>
        <item>Snowboard</item>
        <item>Ski</item>
        <item>Windsurf</item>
        <item>Kitesurf</item>
        <item>Wingfoil</item>
        <item>Supfoil</item>
        <item>Pumpfoil</item>
    </string-array>

    <string-array name="mount_face_values">
        <item>top</item>
        <item>bottom</item>
        <item>front</item>
        <item>back</item>
        <item>left</item>
        <item>right</item>
    </string-array>

    <string-array name="session_mode_values">
        <item>manual start/stop</item>
        <item>15 sec</item>
        <item>30 sec</item>
        <item>60 sec</item>
        <item>120 sec</item>
        <item>300 sec</item>
        <item>600 sec</item>
    </string-array>

    <string-array name="surface_values">
        <item>Ocean</item>
        <item>Sea</item>
        <item>Lake</item>
        <item>River</item>
        <item>Wavepool</item>
        <item>Skatepark</item>
        <item>Street</item>
        <item>Pumptrack</item>
        <item>Snowpark</item>
        <item>Piste</item>
        <item>Backcountry</item>
    </string-array>
</resources>