<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".DataActivity">

    <TextView
        android:id="@+id/exp_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/new_exp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_recording"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/button_recording"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/start_record_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/acc_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/acc"
        android:textColor="@color/grey_400"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/status_view" />

    <TextView
        android:id="@+id/acc_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_acc"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/acc_title_view" />

    <TextView
        android:id="@+id/gyro_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/gyro"
        android:textColor="@color/grey_400"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/acc_view" />

    <TextView
        android:id="@+id/gyro_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/no_gyro"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/gyro_title_view" />

    <TextView
        android:id="@+id/device_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/no_device"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_device"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/grey_400"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_view" />

    <Button
        android:id="@+id/button_pause"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Pause"
        app:layout_constraintBottom_toTopOf="@id/button_recording"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_stop"
        android:layout_marginBottom="10dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_stop"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Stop"
        app:layout_constraintBottom_toTopOf="@id/button_recording"
        app:layout_constraintStart_toEndOf="@id/button_pause"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Discard"
        app:layout_constraintTop_toBottomOf="@id/button_recording"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintTop_toBottomOf="@id/button_recording"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_discard"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>